--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>Google</title>
+<title>TomsProject</title>
 <style>
     html { background: #fff; margin: 0 1em; }
     body { font: .8125em/1.5 arial, sans-serif; text-align: center; }
@@ -30,6 +30,8 @@
 </div>
 <ul>
     <li><a href="https://tp.je/">导航页</a></li>
+    <li><a href="https://www.projectoms.com/">主  页</a></li>
+    <li><a href="https://blog.projectoms.com/">博客页</a></li>
 </ul>
 <p id="footer">
     Copyright © 2011 - TomsProject Inc. All Rights Reserved. <a href="https://beian.miit.gov.cn/">京ICP备19007812号-2</a>
