--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no">
 <title>TomsProject</title>
 <style>
     html { background: #fff; margin: 0 1em; }
     body { font: .8125em/1.5 arial, sans-serif; text-align: center; }
     h1 { font-size: 1.5em; font-weight: normal; margin: 1em 0 0; }
     p#footer { color: #767676 !important; font-size: .77em; !important}
-    ul { margin: 2em; padding: 0; }
+    ul { margin-top: 2em; margin-bottom: 2em; padding: 0; }
     li { display: inline; padding: 0 2em; }
-    div { -moz-border-radius: 20px; -webkit-border-radius: 20px; border: 1px solid #ccc; border-radius: 20px; margin: 2em auto 1em; max-width: 650px; min-width: 544px; }
+    div { -moz-border-radius: 20px; -webkit-border-radius: 20px; border: 1px solid #ccc; border-radius: 20px; margin: 2em auto 1em; max-width: 650px; }
     div:hover, div:hover * { cursor: pointer; }
     div:hover { border-color: #999; }
     div p { margin: .5em 0 1.5em; }
-    img { border: 0; }
+    img { border: 0; width: 91%; }
 </style>
 </head>
 <body>
