Add style for <a>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     html { background: #fff; margin: 0 1em; }
     body { font: .8125em/1.5 arial, sans-serif; text-align: center; }
     h1 { font-size: 1.5em; font-weight: normal; margin: 1em 0 0; }
+    a { color: #0000FF; }
+    a:hover { color: #00FFFF; }
     p#footer { color: #767676 !important; font-size: .77em; !important}
     ul { margin-top: 2em; margin-bottom: 2em; padding: 0; }
     li { display: inline; padding: 0 2em; }
