--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     p#footer { color: #767676 !important; font-size: .77em; !important}
     ul { margin-top: 2em; margin-bottom: 2em; padding: 0; }
     li { display: inline; padding: 0 2em; }
-    div { -moz-border-radius: 20px; -webkit-border-radius: 20px; border: 1px solid #ccc; border-radius: 20px; margin: 2em auto 1em; max-width: 650px; }
+    div { -moz-border-radius: 20px; -webkit-border-radius: 20px; border: 1px solid #ccc; border-radius: 20px; margin: 2em auto 1em; max-width: 65%; }
     div:hover, div:hover * { cursor: pointer; }
     div:hover { border-color: #999; }
     div p { margin: .5em 0 1.5em; }
@@ -24,7 +24,7 @@
 <body>
 <div>
     <a href="https://status.projectoms.com/">
-        <img src="/tomsproject.png" alt="Toms Project Status" width="586" height="257">
+        <img src="/tomsproject.png" alt="Toms Project Status">
     </a>
     <h1>
         <a href="https://status.projectoms.com/"><strong id="target">https://status.projectoms.com/</strong></a>
